--- a/accomplishments.html
+++ b/accomplishments.html
@@ -48,7 +48,7 @@
                 <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="index.html#video4-6">
                             Music Videos</a></li>
                     <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="accomplishments.html#header3-w">Accomplishments</a>
-                    </li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="index.html#bottom">Contact</a></li></ul>
+                    </li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="news.html#content2-14">News</a></li></ul>
                 <div class="icons-menu">
                     <a class="iconfont-wrapper" href="https://www.youtube.com/channel/UCVW09TYiG55y5kVyMgpltwQ" target="_blank">
                         <span class="p-2 mbr-iconfont socicon-youtube socicon" style="color: rgb(228, 63, 63); fill: rgb(228, 63, 63);"></span>
@@ -246,23 +246,23 @@
     </div>
 </section>
 
-<section class="image2 cid-sE4AizBsFY" id="image2-11">
+<section class="image4 cid-sLkTY21Opk" id="image4-16">
     
 
     
 
     <div class="container">
-        <div class="row align-items-center">
+        <div class="row">
             <div class="col-12 col-lg-6">
                 <div class="image-wrapper">
-                    <img src="assets/images/img-1917-1076x1552.jpeg" alt="Mobirise">
-                    <p class="mbr-description mbr-fonts-style mt-2 align-center display-4"></p>
+                    <img src="assets/images/photo-2021-10-03-21-53-19-1076x782.jpg" alt="Mobirise">
+                    <p class="mbr-text mbr-fonts-style mt-2 align-center display-4"><br>1st place and Winner at " Muse International 2021" held at Greece  and invited to " Megaron Athens Concert Hall" in Greece for a concert.</p>
                 </div>
             </div>
-            <div class="col-12 col-lg">
-                <div class="text-wrapper">
-                    <h3 class="mbr-section-title mbr-fonts-style mb-3 display-7"></h3>
-                    <p class="mbr-text mbr-fonts-style display-7">Fateen was one among 25 selected<br>young pianists out of 57 chosen across<br>globe for Final screening at Stay Home<br>Young International Italian Competition<br>2020.</p>
+            <div class="col-12 col-lg-6">
+                <div class="image-wrapper">
+                    <img src="assets/images/img-1917-1034x1552.jpg" alt="Mobirise">
+                    <p class="mbr-text mbr-fonts-style mt-2 align-center display-4">Fateen was one among 25 selected<br>young pianists out of 57 chosen across<br>globe for Final screening at Stay Home<br>Young International Italian Competition<br>2020.</p>
                 </div>
             </div>
         </div>
@@ -307,7 +307,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/t" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/i" style="color:#aaa;">Made with Mobirise</a> web page builder</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/n" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Make a free website - <a href="https://mobirise.site/v" style="color:#aaa;">Click here</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
