--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="index.html#video4-6">
                             Music Videos</a></li>
                     <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="accomplishments.html#header3-w">Accomplishments</a>
-                    </li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="index.html#bottom">Contact</a></li></ul>
+                    </li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="news.html#content2-14">News</a></li></ul>
                 <div class="icons-menu">
                     <a class="iconfont-wrapper" href="https://www.youtube.com/channel/UCVW09TYiG55y5kVyMgpltwQ" target="_blank">
                         <span class="p-2 mbr-iconfont socicon-youtube socicon" style="color: rgb(228, 63, 63); fill: rgb(228, 63, 63);"></span>
@@ -128,13 +128,13 @@
         </div>
         <div class="row align-items-center">
             <div class="col-12 col-lg-6 video-block">
-                <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/9vAzbz5PiDk?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=1&amp;playlist=9vAzbz5PiDk" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+                <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/k50BjYIKGoY?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
                 <p class="mbr-description pt-2 mbr-fonts-style display-4">
                     Video Description</p>
             </div>
             <div class="col-12 col-lg">
                 <div class="text-wrapper">
-                    <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5"><strong>Youngest Indian to score a Distinction in Diploma LCM at the age of 12 yrs - Dec 2020</strong></h5>
+                    <h5 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5"><strong>P.I.Tchaikovsky Dumka ,Op.59</strong></h5>
                     <p class="mbr-text mbr-fonts-style display-7"></p>
                 </div>
             </div>
@@ -187,24 +187,24 @@
         </div>
         <div class="row mbr-gallery mt-4">
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#sE4FGx9unv-modal">
-                    <img class="w-100" src="assets/images/profile-pic-6.jpg" alt="" data-slide-to="0" data-target="#lb-sE4FGx9unv">
+                <div class="item-wrapper" data-toggle="modal" data-target="#sLkYfR1br0-modal">
+                    <img class="w-100" src="assets/images/profile-pic-6.jpg" alt="" data-slide-to="0" data-target="#lb-sLkYfR1br0">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
                 </div>
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"></h6>
             </div><div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#sE4FGx9unv-modal">
-                    <img class="w-100" src="assets/images/fb-img-1612799434000.jpg" alt="" data-slide-to="1" data-target="#lb-sE4FGx9unv">
+                <div class="item-wrapper" data-toggle="modal" data-target="#sLkYfR1br0-modal">
+                    <img class="w-100" src="assets/images/fb-img-1612799434000.jpg" alt="" data-slide-to="1" data-target="#lb-sLkYfR1br0">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
                 </div>
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"></h6>
             </div><div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#sE4FGx9unv-modal">
-                    <img class="w-100" src="assets/images/profile-pic-3.jpg" alt="" data-slide-to="2" data-target="#lb-sE4FGx9unv">
+                <div class="item-wrapper" data-toggle="modal" data-target="#sLkYfR1br0-modal">
+                    <img class="w-100" src="assets/images/profile-pic-3.jpg" alt="" data-slide-to="2" data-target="#lb-sLkYfR1br0">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -214,72 +214,72 @@
             
             
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#sE4FGx9unv-modal">
-                    <img class="w-100" src="assets/images/fb-img-1612799332204.jpg" alt="" data-slide-to="3" data-target="#lb-sE4FGx9unv">
+                <div class="item-wrapper" data-toggle="modal" data-target="#sLkYfR1br0-modal">
+                    <img class="w-100" src="assets/images/fb-img-1612799332204.jpg" alt="" data-slide-to="3" data-target="#lb-sLkYfR1br0">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
                 </div>
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"></h6>
             </div><div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#sE4FGx9unv-modal">
-                    <img class="w-100" src="assets/images/pic-6.jpg" alt="" data-slide-to="4" data-target="#lb-sE4FGx9unv">
+                <div class="item-wrapper" data-toggle="modal" data-target="#sLkYfR1br0-modal">
+                    <img class="w-100" src="assets/images/pic-6.jpg" alt="" data-slide-to="4" data-target="#lb-sLkYfR1br0">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
                 </div>
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"></h6>
             </div><div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#sE4FGx9unv-modal">
-                    <img class="w-100" src="assets/images/fb-img-1612798609714.jpg" alt="" data-slide-to="5" data-target="#lb-sE4FGx9unv">
+                <div class="item-wrapper" data-toggle="modal" data-target="#sLkYfR1br0-modal">
+                    <img class="w-100" src="assets/images/fb-img-1612798609714.jpg" alt="" data-slide-to="5" data-target="#lb-sLkYfR1br0">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
                 </div>
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"></h6>
             </div><div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#sE4FGx9unv-modal">
-                    <img class="w-100" src="assets/images/fb-img-1612798790453.jpg" alt="" data-slide-to="6" data-target="#lb-sE4FGx9unv">
+                <div class="item-wrapper" data-toggle="modal" data-target="#sLkYfR1br0-modal">
+                    <img class="w-100" src="assets/images/fb-img-1612798790453.jpg" alt="" data-slide-to="6" data-target="#lb-sLkYfR1br0">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
                 </div>
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"></h6>
             </div><div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#sE4FGx9unv-modal">
-                    <img class="w-100" src="assets/images/fb-img-1612798757289.jpg" alt="" data-slide-to="7" data-target="#lb-sE4FGx9unv">
+                <div class="item-wrapper" data-toggle="modal" data-target="#sLkYfR1br0-modal">
+                    <img class="w-100" src="assets/images/fb-img-1612798757289.jpg" alt="" data-slide-to="7" data-target="#lb-sLkYfR1br0">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
                 </div>
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"></h6>
             </div><div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#sE4FGx9unv-modal">
-                    <img class="w-100" src="assets/images/img-7668-901x1600.jpeg" alt="" data-slide-to="8" data-target="#lb-sE4FGx9unv">
+                <div class="item-wrapper" data-toggle="modal" data-target="#sLkYfR1br0-modal">
+                    <img class="w-100" src="assets/images/img-7668-901x1600.jpeg" alt="" data-slide-to="8" data-target="#lb-sLkYfR1br0">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
                 </div>
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"></h6>
             </div><div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#sE4FGx9unv-modal">
-                    <img class="w-100" src="assets/images/img-7669-901x1600.jpeg" alt="" data-slide-to="9" data-target="#lb-sE4FGx9unv">
+                <div class="item-wrapper" data-toggle="modal" data-target="#sLkYfR1br0-modal">
+                    <img class="w-100" src="assets/images/img-7669-901x1600.jpeg" alt="" data-slide-to="9" data-target="#lb-sLkYfR1br0">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
                 </div>
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"></h6>
             </div><div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#sE4FGx9unv-modal">
-                    <img class="w-100" src="assets/images/img-7670-1080x720.jpg" alt="" data-slide-to="10" data-target="#lb-sE4FGx9unv">
+                <div class="item-wrapper" data-toggle="modal" data-target="#sLkYfR1br0-modal">
+                    <img class="w-100" src="assets/images/img-7670-1080x720.jpg" alt="" data-slide-to="10" data-target="#lb-sLkYfR1br0">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
                 </div>
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"></h6>
             </div><div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#sE4FGx9unv-modal">
-                    <img class="w-100" src="assets/images/img-7671-1041x1600.jpg" alt="" data-slide-to="11" data-target="#lb-sE4FGx9unv">
+                <div class="item-wrapper" data-toggle="modal" data-target="#sLkYfR1br0-modal">
+                    <img class="w-100" src="assets/images/img-7671-1041x1600.jpg" alt="" data-slide-to="11" data-target="#lb-sLkYfR1br0">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -288,11 +288,11 @@
             </div>
         </div>
 
-        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="sE4FGx9unv-modal">
+        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="sLkYfR1br0-modal">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <div class="carousel slide carousel-fade" id="lb-sE4FGx9unv" data-ride="carousel" data-interval="5000">
+                        <div class="carousel slide carousel-fade" id="lb-sLkYfR1br0" data-ride="carousel" data-interval="5000">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img class="d-block w-100" src="assets/images/profile-pic-6.jpg" alt="">
@@ -324,18 +324,18 @@
                                 </div>
                             </div>
                             <ol class="carousel-indicators">
-                                <li data-slide-to="0" class="active" data-target="#lb-sE4FGx9unv"></li>
-                                <li data-slide-to="1" data-target="#lb-sE4FGx9unv"></li>
-                                <li data-slide-to="2" data-target="#lb-sE4FGx9unv"></li>
-                                <li data-slide-to="3" data-target="#lb-sE4FGx9unv"></li><li data-slide-to="4" data-target="#lb-sE4FGx9unv"></li><li data-slide-to="5" data-target="#lb-sE4FGx9unv"></li><li data-slide-to="6" data-target="#lb-sE4FGx9unv"></li><li data-slide-to="7" data-target="#lb-sE4FGx9unv"></li><li data-slide-to="8" data-target="#lb-sE4FGx9unv"></li><li data-slide-to="9" data-target="#lb-sE4FGx9unv"></li><li data-slide-to="10" data-target="#lb-sE4FGx9unv"></li><li data-slide-to="11" data-target="#lb-sE4FGx9unv"></li>
+                                <li data-slide-to="0" class="active" data-target="#lb-sLkYfR1br0"></li>
+                                <li data-slide-to="1" data-target="#lb-sLkYfR1br0"></li>
+                                <li data-slide-to="2" data-target="#lb-sLkYfR1br0"></li>
+                                <li data-slide-to="3" data-target="#lb-sLkYfR1br0"></li><li data-slide-to="4" data-target="#lb-sLkYfR1br0"></li><li data-slide-to="5" data-target="#lb-sLkYfR1br0"></li><li data-slide-to="6" data-target="#lb-sLkYfR1br0"></li><li data-slide-to="7" data-target="#lb-sLkYfR1br0"></li><li data-slide-to="8" data-target="#lb-sLkYfR1br0"></li><li data-slide-to="9" data-target="#lb-sLkYfR1br0"></li><li data-slide-to="10" data-target="#lb-sLkYfR1br0"></li><li data-slide-to="11" data-target="#lb-sLkYfR1br0"></li>
                             </ol>
                             <a role="button" href="" class="close" data-dismiss="modal" aria-label="Close">
                             </a>
-                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" href="#lb-sE4FGx9unv">
+                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" href="#lb-sLkYfR1br0">
                                 <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                                 <span class="sr-only">Previous</span>
                             </a>
-                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" href="#lb-sE4FGx9unv">
+                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" href="#lb-sLkYfR1br0">
                                 <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                                 <span class="sr-only">Next</span>
                             </a>
@@ -437,7 +437,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/e" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Made with Mobirise <a href="https://mobirise.site/u" style="color:#aaa;">web</a> template</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/playervimeo/vimeo_player.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/v" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Start your own website - <a href="https://mobirise.site/w" style="color:#aaa;">Go now</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/parallax/jarallax.min.js"></script>  <script src="assets/playervimeo/vimeo_player.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
