--- a/achievement.html
+++ b/achievement.html
@@ -220,8 +220,8 @@
         <div class="row">
             <div class="col-12 col-lg-6">
                 <div class="image-wrapper">
-                    <img src="assets/images/cer5.jfif" alt=" ">
-                    <p class="mbr-text mbr-fonts-style mt-2 align-center display-4">Fateen was the Winner of the 4th International Festival-Competition "Music of the World", Piano Solo in 12 -15 yrs category, November 2021 held at Israel.</p>
+                    <img src="" alt=" ">
+                    <p class="mbr-text mbr-fonts-style mt-2 align-center display-4"></p>
         
                     </div>
             </div>
