--- a/tribute.html
+++ b/tribute.html
@@ -131,7 +131,7 @@
 
 
 <section class="image4 cid-sE3x29Ygoi" id="image4-s">
-<center><h2 class="mbr-section-title mbr-fonts-style mb-3 display-2"><strong>A Musical Tribute Video</strong></h2></center>
+<center><h2 class="mbr-section-title mbr-fonts-style mb-3 display-2"><strong>A Musical Tribute Concert</strong></h2></center>
                 
     <div class="soc-item">
         <iframe width="921" height="518" src="https://www.youtube.com/embed/KGypQbDRoxA" title="Rani Vijayadevi Centenary celebration 2022-  A Musical Tribute Concert by Fateen (26-08-2022)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
