--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
     <div class="container">
         <div class="row1 ">
             <div class="col-12 col-lg-7">
-                <h1 class="mbr-section-title mbr-fonts-style mbr-grey mb-3 display-1"><strong>Fateen</strong></h1>
+                <h1 class="mbr-section-title mbr-fonts-style mbr-white mb-3 display-1"><strong>Fateen</strong></h1>
                 
-                <p class="mbr-grey  mbr-fonts-style  display-4">
+                <p class="mbr-white  mbr-fonts-style  display-4">
                     <strong>Western Classical Pianist from Bangalore, India</strong><br>
                     <strong> Western Classical Vocalist</strong>
                     <br><strong>Passionate Guitarist</strong>
